// Copyright 2023 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package buf.knittest;

import "google/protobuf/empty.proto";
import "buf/knittest/model.proto";

service FooService {
  rpc GetFoo(GetFooRequest) returns (GetFooResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc MutateFoo(MutateFooRequest) returns (MutateFooResponse);
  rpc QueryFoos(QueryFoosRequest) returns (stream QueryFoosResponse);
}

service FizzService {
  rpc GetFizz(GetFizzRequest) returns (GetFizzResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

message GetFooRequest {
  message Attribute {
    string key = 1 [json_name="name"];
    string value = 2;
  }
  oneof by {
    string name = 1;
    uint64 id = 2 [json_name="unique_id"];
    string tag = 3;
    Attribute attribute = 4;
  }
}

message GetFooResponse {
  repeated Foo results = 1;
}

message MutateFooRequest {
  message Attribute {
    string key = 1;
    string value = 2;
  }
  oneof by {
    string name = 1;
    uint64 id = 2;
    string tag = 3;
    Attribute attribute = 4;
  }
  oneof op {
    Foo create = 5;
    Foo replace = 6;
    FooUpdate update = 7;
    google.protobuf.Empty delete = 8;
  }
  message FooUpdate {
    repeated string add_tags = 1;
    repeated string remove_tags = 2;
    map<string, string> merge_attributes = 3;
    repeated string remove_attributes = 4;
    optional FooState change_state = 5;
  }
}

message MutateFooResponse {
  repeated Foo results = 1;
}

message QueryFoosRequest {
  message Attribute {
    string key = 1;
    string value = 2;
  }
  oneof by {
    string name = 1;
    uint64 id = 2;
    string tag = 3;
    Attribute attribute = 4;
  }
}

message QueryFoosResponse {
  Foo foo = 1;
}

message GetFizzRequest {
  string criteria = 1;
}

message GetFizzResponse {
  Fizz result = 1;
}
